chore: add env metadata and proper file packaging

--- a/package.json
+++ b/package.json
@@ -20,6 +20,15 @@
     "sd-jwt",
     "privacy"
   ],
+  "files": [
+    ".agent",
+    "schema",
+    "scripts",
+    "skill.json",
+    "LICENSE",
+    "README.md",
+    "AGENT.md"
+  ],
   "license": "Apache-2.0",
   "main": "index.js",
   "scripts": {
